create github pages

--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,6 +1,6 @@
 @font-face {
-   font-family: 'Solomon - bold';
-   src: url('Solomon - bold/font.ttf');
+   font-family: 'Futura XBlk BT';
+   src: url('Futura XBlk BT/font.ttf');
 }
 @font-face {
    font-family: 'CornerOne-Bold-Regular';
