--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i);
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 
 
 body {
@@ -18,7 +17,7 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Solomon - bold';
+  font-family: 'Futura XBlk BT';
   font-size: 4.25rem;
 }
 .display-1 > .mbr-iconfont {
@@ -32,7 +31,7 @@ body {
   font-size: 4rem;
 }
 .display-4 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1rem;
 }
 .display-4 > .mbr-iconfont {
@@ -47,10 +46,10 @@ body {
 }
 .display-7 {
   font-family: 'Solomon - thin';
-  font-size: 1rem;
+  font-size: 1.4rem;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 2.24rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -638,13 +637,13 @@ a:hover {
   box-shadow: none;
   color: #565656;
   font-family: 'Solomon - thin';
-  font-size: 1rem;
+  font-size: 1.4rem;
   line-height: 1.43;
   min-height: 3.5em;
   padding: 1.07em .5em;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 2.24rem;
 }
 .form-control,
 .form-control:focus {
@@ -1285,395 +1284,6 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
-.cid-qSLMBFwLIS .navbar {
-  background: #ffffff;
-  transition: none;
-  min-height: 77px;
-  padding: .5rem 0;
-}
-.cid-qSLMBFwLIS .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
-}
-.cid-qSLMBFwLIS a {
-  font-style: normal;
-}
-.cid-qSLMBFwLIS .nav-item span {
-  padding-right: 0.4em;
-  line-height: 0.5em;
-  vertical-align: text-bottom;
-  position: relative;
-  text-decoration: none;
-}
-.cid-qSLMBFwLIS .nav-item a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.7rem 0 !important;
-  margin: 0rem .65rem !important;
-}
-.cid-qSLMBFwLIS .nav-item:focus,
-.cid-qSLMBFwLIS .nav-link:focus {
-  outline: none;
-}
-.cid-qSLMBFwLIS .btn {
-  padding: 0.4rem 1.5rem;
-  display: inline-flex;
-  align-items: center;
-}
-.cid-qSLMBFwLIS .btn .mbr-iconfont {
-  font-size: 1.6rem;
-}
-.cid-qSLMBFwLIS .menu-logo {
-  margin-right: auto;
-}
-.cid-qSLMBFwLIS .menu-logo .navbar-brand {
-  display: flex;
-  margin-left: 5rem;
-  padding: 0;
-  transition: padding .2s;
-  min-height: 3.8rem;
-  align-items: center;
-}
-.cid-qSLMBFwLIS .menu-logo .navbar-brand .navbar-caption-wrap {
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  word-break: break-word;
-  min-width: 7rem;
-  margin: .3rem 0;
-}
-.cid-qSLMBFwLIS .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
-  line-height: 1.2rem !important;
-  padding-right: 2rem;
-}
-.cid-qSLMBFwLIS .menu-logo .navbar-brand .navbar-logo {
-  font-size: 4rem;
-  transition: font-size 0.25s;
-}
-.cid-qSLMBFwLIS .menu-logo .navbar-brand .navbar-logo img {
-  display: flex;
-}
-.cid-qSLMBFwLIS .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
-  transition: font-size 0.25s;
-}
-.cid-qSLMBFwLIS .navbar-toggleable-sm .navbar-collapse {
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  padding-right: 5rem;
-  width: auto;
-}
-.cid-qSLMBFwLIS .navbar-toggleable-sm .navbar-collapse .navbar-nav {
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  padding-left: 0;
-}
-.cid-qSLMBFwLIS .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
-  -webkit-align-self: center;
-  align-self: center;
-}
-.cid-qSLMBFwLIS .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
-  padding-left: 0;
-  padding-bottom: 0;
-}
-.cid-qSLMBFwLIS .dropdown .dropdown-menu {
-  background: #ffffff;
-  display: none;
-  position: absolute;
-  min-width: 5rem;
-  padding-top: 1.4rem;
-  padding-bottom: 1.4rem;
-  text-align: left;
-}
-.cid-qSLMBFwLIS .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
-}
-.cid-qSLMBFwLIS .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-qSLMBFwLIS .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-}
-.cid-qSLMBFwLIS .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-qSLMBFwLIS .navbar-toggleable-sm.opened:after {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  content: '';
-  background-color: rgba(0, 0, 0, 0.1);
-  left: 0;
-  bottom: 0;
-  transform: translateY(100%);
-  -webkit-transform: translateY(100%);
-  z-index: 1000;
-}
-.cid-qSLMBFwLIS .navbar.navbar-short {
-  min-height: 60px;
-  transition: all .2s;
-}
-.cid-qSLMBFwLIS .navbar.navbar-short .navbar-toggler-right {
-  top: 20px;
-}
-.cid-qSLMBFwLIS .navbar.navbar-short .navbar-logo a {
-  font-size: 2.5rem !important;
-  line-height: 2.5rem;
-  transition: font-size 0.25s;
-}
-.cid-qSLMBFwLIS .navbar.navbar-short .navbar-logo a .mbr-iconfont {
-  font-size: 2.5rem !important;
-}
-.cid-qSLMBFwLIS .navbar.navbar-short .navbar-logo a img {
-  height: 3rem !important;
-}
-.cid-qSLMBFwLIS .navbar.navbar-short .navbar-brand {
-  min-height: 3rem;
-}
-.cid-qSLMBFwLIS button.navbar-toggler {
-  width: 31px;
-  height: 18px;
-  cursor: pointer;
-  transition: all .2s;
-  top: 1.5rem;
-  right: 1rem;
-}
-.cid-qSLMBFwLIS button.navbar-toggler:focus {
-  outline: none;
-}
-.cid-qSLMBFwLIS button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #333333;
-}
-.cid-qSLMBFwLIS button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-qSLMBFwLIS button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-qSLMBFwLIS button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-qSLMBFwLIS button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-qSLMBFwLIS nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-qSLMBFwLIS nav.opened .hamburger span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-qSLMBFwLIS nav.opened .hamburger span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-qSLMBFwLIS nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-qSLMBFwLIS .collapsed.navbar-expand {
-  flex-direction: column;
-}
-.cid-qSLMBFwLIS .collapsed .btn {
-  display: flex;
-}
-.cid-qSLMBFwLIS .collapsed .navbar-collapse {
-  display: none !important;
-  padding-right: 0 !important;
-}
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.collapsing,
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.show {
-  display: block !important;
-}
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.collapsing .navbar-nav,
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.show .navbar-nav {
-  display: block;
-  text-align: center;
-}
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.show .navbar-nav .nav-item {
-  clear: both;
-}
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.collapsing .navbar-buttons,
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.show .navbar-buttons {
-  text-align: center;
-}
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
-.cid-qSLMBFwLIS .collapsed .navbar-collapse.show .navbar-buttons:last-child {
-  margin-bottom: 1rem;
-}
-.cid-qSLMBFwLIS .collapsed button.navbar-toggler {
-  display: block;
-}
-.cid-qSLMBFwLIS .collapsed .navbar-brand {
-  margin-left: 1rem !important;
-}
-.cid-qSLMBFwLIS .collapsed .navbar-toggleable-sm {
-  flex-direction: column;
-  -webkit-flex-direction: column;
-}
-.cid-qSLMBFwLIS .collapsed .dropdown .dropdown-menu {
-  width: 100%;
-  text-align: center;
-  position: relative;
-  opacity: 0;
-  display: block;
-  height: 0;
-  visibility: hidden;
-  padding: 0;
-  transition-duration: .5s;
-  transition-property: opacity,padding,height;
-}
-.cid-qSLMBFwLIS .collapsed .dropdown.open > .dropdown-menu {
-  position: relative;
-  opacity: 1;
-  height: auto;
-  padding: 1.4rem 0;
-  visibility: visible;
-}
-.cid-qSLMBFwLIS .collapsed .dropdown .dropdown-submenu {
-  left: 0;
-  text-align: center;
-  width: 100%;
-}
-.cid-qSLMBFwLIS .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-  margin-top: 0;
-  position: inherit;
-  right: 0;
-  top: 50%;
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: .3em;
-  vertical-align: middle;
-  content: "";
-  border-top: .30em solid;
-  border-right: .30em solid transparent;
-  border-left: .30em solid transparent;
-}
-@media (max-width: 991px) {
-  .cid-qSLMBFwLIS.navbar-expand {
-    flex-direction: column;
-  }
-  .cid-qSLMBFwLIS img {
-    height: 3.8rem !important;
-  }
-  .cid-qSLMBFwLIS .btn {
-    display: flex;
-  }
-  .cid-qSLMBFwLIS button.navbar-toggler {
-    display: block;
-  }
-  .cid-qSLMBFwLIS .navbar-brand {
-    margin-left: 1rem !important;
-  }
-  .cid-qSLMBFwLIS .navbar-toggleable-sm {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-qSLMBFwLIS .navbar-collapse {
-    display: none !important;
-    padding-right: 0 !important;
-  }
-  .cid-qSLMBFwLIS .navbar-collapse.collapsing,
-  .cid-qSLMBFwLIS .navbar-collapse.show {
-    display: block !important;
-  }
-  .cid-qSLMBFwLIS .navbar-collapse.collapsing .navbar-nav,
-  .cid-qSLMBFwLIS .navbar-collapse.show .navbar-nav {
-    display: block;
-    text-align: center;
-  }
-  .cid-qSLMBFwLIS .navbar-collapse.collapsing .navbar-nav .nav-item,
-  .cid-qSLMBFwLIS .navbar-collapse.show .navbar-nav .nav-item {
-    clear: both;
-  }
-  .cid-qSLMBFwLIS .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-qSLMBFwLIS .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-qSLMBFwLIS .navbar-collapse.collapsing .navbar-buttons,
-  .cid-qSLMBFwLIS .navbar-collapse.show .navbar-buttons {
-    text-align: center;
-  }
-  .cid-qSLMBFwLIS .navbar-collapse.collapsing .navbar-buttons:last-child,
-  .cid-qSLMBFwLIS .navbar-collapse.show .navbar-buttons:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-qSLMBFwLIS .dropdown .dropdown-menu {
-    width: 100%;
-    text-align: center;
-    position: relative;
-    opacity: 0;
-    display: block;
-    height: 0;
-    visibility: hidden;
-    padding: 0;
-    transition-duration: .5s;
-    transition-property: opacity,padding,height;
-  }
-  .cid-qSLMBFwLIS .dropdown.open > .dropdown-menu {
-    position: relative;
-    opacity: 1;
-    height: auto;
-    padding: 1.4rem 0;
-    visibility: visible;
-  }
-  .cid-qSLMBFwLIS .dropdown .dropdown-submenu {
-    left: 0;
-    text-align: center;
-    width: 100%;
-  }
-  .cid-qSLMBFwLIS .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-    margin-top: 0;
-    position: inherit;
-    right: 0;
-    top: 50%;
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: .3em;
-    vertical-align: middle;
-    content: "";
-    border-top: .30em solid;
-    border-right: .30em solid transparent;
-    border-left: .30em solid transparent;
-  }
-}
-@media (min-width: 767px) {
-  .cid-qSLMBFwLIS .menu-logo {
-    flex-shrink: 0;
-  }
-}
-.cid-qSLMBFwLIS .navbar-collapse {
-  flex-basis: auto;
-}
-.cid-qSLMBFwLIS .nav-link:hover,
-.cid-qSLMBFwLIS .dropdown-item:hover {
-  color: #767676 !important;
-}
 .cid-qSLIu6zNDr {
   background-image: url("../../../assets/images/mbr-1-720x1080.jpg");
 }
@@ -1761,23 +1371,6 @@ body {
 }
 .cid-qSLJUIRDdW .btn {
   margin: 0 0 .5rem 0;
-}
-.cid-qSLJYSAz3f {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #f3f4f6;
-}
-.cid-qSLJYSAz3f .testimonial-text {
-  font-style: italic;
-  color: #676767;
-  font-weight: 300;
-}
-.cid-qSLJYSAz3f .mbr-author-name {
-  font-weight: bold;
-  color: #232;
-}
-.cid-qSLJYSAz3f .mbr-author-desc {
-  color: #232;
 }
 .cid-qSLMxzaa6T {
   padding-top: 45px;
