--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -39,10 +39,10 @@ body {
 }
 .display-5 {
   font-family: 'CornerOne-Bold-Regular';
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.4rem;
+  font-size: 3.2rem;
 }
 .display-7 {
   font-family: 'Solomon - thin';
@@ -73,9 +73,9 @@ body {
     line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.2rem;
-    font-size: calc( 1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.6rem;
+    font-size: calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -126,7 +126,7 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #0f7699 !important;
+  background-color: #ff3366 !important;
 }
 .bg-success {
   background-color: #f7ed4a !important;
@@ -142,8 +142,8 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #0f7699 !important;
-  border-color: #0f7699 !important;
+  background-color: #ff3366 !important;
+  border-color: #ff3366 !important;
   color: #ffffff !important;
 }
 .btn-primary:hover,
@@ -151,14 +151,14 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: #ffffff !important;
-  background-color: #084053 !important;
-  border-color: #084053 !important;
+  background-color: #e50039 !important;
+  border-color: #e50039 !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #084053 !important;
-  border-color: #084053 !important;
+  background-color: #e50039 !important;
+  border-color: #e50039 !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -306,22 +306,22 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #062e3c;
-  color: #062e3c;
+  border-color: #cc0033;
+  color: #cc0033;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #0f7699;
-  border-color: #0f7699;
+  background-color: #ff3366;
+  border-color: #ff3366;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #0f7699 !important;
-  border-color: #0f7699 !important;
+  background-color: #ff3366 !important;
+  border-color: #ff3366 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -458,7 +458,7 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #0f7699 !important;
+  color: #ff3366 !important;
 }
 .text-secondary {
   color: #7f1933 !important;
@@ -483,7 +483,7 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #062e3c !important;
+  color: #cc0033 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
@@ -530,8 +530,8 @@ a.text-black:focus {
   box-shadow: none !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #0f7699;
-  border-color: #0f7699;
+  background-color: #ff3366;
+  border-color: #ff3366;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -545,11 +545,11 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #0f7699;
+  color: #ff3366;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #3cbfec;
+  color: #ffffff;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -667,7 +667,7 @@ blockquote {
   padding: 10px 0 10px 20px;
   font-size: 1.09rem;
   position: relative;
-  border-color: #0f7699;
+  border-color: #ff3366;
   border-width: 3px;
 }
 ul,
@@ -716,7 +716,7 @@ pre {
   text-align: center;
   position: relative;
   border: 2px solid #c0a375;
-  border-color: #0f7699;
+  border-color: #ff3366;
   color: #232323;
   cursor: pointer;
 }
@@ -727,7 +727,7 @@ pre {
 }
 .btn-social:hover {
   color: #fff;
-  background: #0f7699;
+  background: #ff3366;
 }
 .btn-social + .btn {
   margin-left: .1rem;
@@ -735,11 +735,11 @@ pre {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #0f7699;
+  background: #ff3366;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #0f7699;
+  color: #ff3366;
 }
 /* Headers*/
 .offset-1 {
@@ -1287,13 +1287,46 @@ body {
 .cid-qSLIu6zNDr {
   background-image: url("../../../assets/images/mbr-1-720x1080.jpg");
 }
-.cid-qSLIBQZh45 {
-  padding-top: 60px;
-  padding-bottom: 60px;
+.cid-qSLIu6zNDr H1 {
+  text-align: left;
+}
+.cid-qSLIu6zNDr .mbr-text,
+.cid-qSLIu6zNDr .mbr-section-btn {
+  text-align: left;
+}
+.cid-qSLJUIRDdW {
+  padding-top: 90px;
+  padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-qSLIBQZh45 .mbr-section-subtitle {
+.cid-qSLJUIRDdW .mbr-section-subtitle {
   color: #767676;
+}
+.cid-qSLJUIRDdW .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-qSLIChdmim {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-qSLIChdmim .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qSLIChdmim .section-text {
+  padding: 2rem 0;
+}
+.cid-qSLIChdmim .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qSLIChdmim .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-qSLJvbKLpB {
   padding-top: 45px;
@@ -1338,39 +1371,13 @@ body {
     padding: 0 0 2rem 0 !important;
   }
 }
-.cid-qSLIChdmim {
-  padding-top: 30px;
-  padding-bottom: 30px;
+.cid-qSLIBQZh45 {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-qSLIChdmim .line {
-  background-color: #149dcc;
-  color: #149dcc;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
-}
-.cid-qSLIChdmim .section-text {
-  padding: 2rem 0;
-}
-.cid-qSLIChdmim .inner-container {
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-qSLIChdmim .inner-container {
-    width: 100% !important;
-  }
-}
-.cid-qSLJUIRDdW {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-qSLJUIRDdW .mbr-section-subtitle {
+.cid-qSLIBQZh45 .mbr-section-subtitle {
   color: #767676;
-}
-.cid-qSLJUIRDdW .btn {
-  margin: 0 0 .5rem 0;
 }
 .cid-qSLMxzaa6T {
   padding-top: 45px;
